[package]
name = "hide-fleet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Parallel agent fleet, workstation mode, and batch orchestration scaffold for HIDE"

[dependencies]
hide-core = { path = "../hide-core" }
hide-kernel = { path = "../hide-kernel" }
futures = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
