[package]
name = "hide-fleet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Parallel agent fleet, workstation mode, and batch orchestration scaffold for HIDE"

[lib]
path = "lib.rs"

[dependencies]
hide-core = { path = "../hide-core" }
hide-kernel = { path = "../hide-kernel" }
futures = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
blake3 = { workspace = true }
ulid = { workspace = true }
similar = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
# Crate-specific: WebSocket transport for the workstation/remote plane (§4.9).
# JSON-RPC 2.0 frames ride over this. Not a workspace dep (only this crate needs it).
tokio-tungstenite = { version = "0.24", default-features = false, features = ["handshake", "connect", "stream"] }

[dev-dependencies]
hawking-orch = { path = "../hawking-orch" }
