[package]
name = "hide-personalize"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Personalization, self-improvement, and eval-generation scaffold for HIDE"

[dependencies]
hide-core = { path = "../hide-core" }
hide-kernel = { path = "../hide-kernel" }
hawking-context = { path = "../hawking-context" }
hawking-index = { path = "../hawking-index" }
futures = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
