[package]
name = "hide-personalize"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Personalization, self-improvement, and eval-generation scaffold for HIDE"

[dependencies]
hide-core = { path = "../hide-core" }
hide-security = { path = "../hide-security" }
hawking-index = { path = "../hawking-index" }
blake3 = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
