[package]
name = "hide-personalize"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Personalization, self-improvement, and eval-generation scaffold for HIDE"

[lib]
path = "lib.rs"

[dependencies]
hide-core = { path = "../hide-core" }
hide-security = { path = "../hide-security" }
hawking-index = { path = "../hawking-index" }
blake3 = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }

# Crate-specific: tree-sitter for the §11.8.2 Tier-1 static parse-sanity check.
# Same ABI-compatible set hawking-index pins (the grammar bundles we consult
# from `hawking_index::parse::grammars` are built against these versions).
tree-sitter = "0.25"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
